--- a/index.html
+++ b/index.html
@@ -4,64 +4,109 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>HOMOEOPATHY</title>
-</head>
-<body style="background-color: lightcoral;">
-	<div ><img src="logo.jpg" style="width:200px;height:200px;border-radius: 50%;"></div>
-	<h1 style="text-align: center;color: blueviolet;">INDIAN HOMOEOPATHY DRUGS</h1>
-	<div style="width:100%;height: auto;background-color: black;color: white;font-size: 1.7em;">
-1. Abelmoschus moschatus
-2. Abrus precatorius
-3. Acalypha indica
-4. Acorus calamus
-5. Aegle marmelos
-6. Allium sativum
-7. Andrographis paniculata
-8. Arctium lappa
-9. Atista indica
-10. Azadirachta indica
-11. Boerhaavia diffusa
-12. Caesalpinia bonducella
-13. Calotropis gigantea
-14. Caltha palustris
-15. Cassia sophera
-16. Cephalandra indica
-17. Cinnamomum zeylanicum
-18. Cynodon dactylon
-19. Desmodium gangeticum
-20. Embelia ribes
-21. Ficus religiosa
-22. Galium aparine
-23. Gymnema sylvestre
-24. Holarrhena antidysenterica
-25. Hydrocotyle asiatica
-26. Lamium album
-27. Leucas aspera
-28. Luffa amara
-29. Mangifera indica
-30. Nyctanthes arbortristis
-31. Ocimum canum
-32. Ocimum sanctum.
-33. Oldenlandia herbacea
-34. Opuntia vulgaris
-35. Piper nigrum
-36. Plantago major
-37. Polygonum punctatum
-38. Rauwolfia serpentina
-39. Saraca indica.
-40. Sinapis nigra
-41. Solanum nigrum
-42. Solidago virgaurea
-43. Stellaria media
-44. Syzygium jambolanum
-45. Taxus baccata
-46. Terminalia arjuna
-47. Terminalia chebula
-48. Tinospora cordifolia
-49. Tylophora indica
-50. Urtica urens
-51. Viola odorata
-52. Viscum album
-	</div>
+	<style>
+		span{
+			color: white;
+		}
+		hr{
+			width: 100%;
+			height:5px;
+			background-color:grey;
+		}
+		table, td, th {
+  border: 5px solid white;
+  color:maroona;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  color: red;
+}
+a{
+	color: red;
+	font-size: big;
+	text-decoration: none;
+}
 
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
+</head>
+<body style="background-color: lightgreen;">
+	<div style="width: 15%;height: 200px;float: left;"><a href="index.html"><img src="logo.jpg" style="width:200px;height:200px;border-radius: 50%;"></a></div>
+	<div style="width: 85%;height: 200px;float: left;padding-top: 50px;">	
+		<h1 style="text-align: center;color: blueviolet;font-size: 2.2em;">TREATMENT WITH HOMOEOPATHY<span>(STUDY HOMOEOPATHY )</span></h1>
+	</div>
+<!-------------NAV-BAR--------------->
+<div style="width:100%;float: left;">
+<ul>
+  <li><a href="index.html">HOME</a></li>
+  <li><a href="indian_homoeopathy_drugs.html">INDIAN HOMOEOPATHY DRUGS</a></li>
+  <li><a href="CASE_STUDY.html">CASE STUDY</a></li>
+</ul>
+</div>
+<!-------------NAV-BAR--------------->
+<hr>
+<table>
+	<tr>
+		<th>SL No</th>
+		<th>TOPIC</th>
+		<th>LINK</th>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>ORGANON OF MEDICINE by Hahnemann Samuel</td>
+		<td><a href="http://www.homeoint.org/books/hahorgan/index.htm" target="_blank">ORGANON OF MEDICINE</a></td>
+
+	</tr>
+	<tr>
+		<td>2</td>
+		<td>The Chronic Diseases, their Peculiar Nature and their Homœopathic Cure.
+by Dr Samuel Hahnemann</td>
+		<td><a href="http://www.homeoint.org/books/hahchrdi/index.htm" target="_blank">The Chronic Diseases</a></td>
+		
+	</tr>
+	<tr>
+		<td>3</td>
+		<td>The Life and Letters of Dr Samuel Hahnemann</td>
+		<td><a href="http://www.homeoint.org/books4/bradford/index.htm" target="_blank">The Life and Letters of Dr Samuel Hahnemann</a></td>
+		
+	</tr>
+	<tr>
+		<td>4</td>
+		<td>Materia Medica Homeopathy books</td>
+		<td><a href="https://www.materiamedica.info/en/free-materia-medica-books.php" target="_blank">Materia Medica Homeopathy books</a></td>
+		
+	</tr>
+	<tr>
+		<td>5</td>
+		<td>HOMÉOPATHE INTERNATIONAL</td>
+		<td><a href="http://www.homeoint.org/english/index.htm" target="_blank">HOMEOINT - We help homeopathy </a></td>
+		
+	</tr>
+</table>
 </body>
 </html>
