--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>HOMOEOPATHY</title>
+	 <link rel="icon" href="logo.jpg">
 	<style>
 		span{
 			color: white;
