--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ li a:hover {
   <li><a href="index.html">HOME</a></li>
   <li><a href="indian_homoeopathy_drugs.html">INDIAN HOMOEOPATHY DRUGS</a></li>
   <li><a href="CASE_STUDY.html">CASE STUDY</a></li>
+  <li><a href="YOUTUBE_CHANNELS.html">YOUTUBE CHANNELS</a></li>
+    <li><a href="JOURNALS_ARTICLES.html">JOURNALS & ARTICLES</a></li>	
 </ul>
 </div>
 <!-------------NAV-BAR--------------->
