--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -33,7 +33,7 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
 <table>
 	<tr>
 		<th>SERIAL NUMBER</th>
-		<th>JOURNALS & ARTICLE TOPICS</th>
+		<th>JOURNALS & ARTICLES TOPICS</th>
 		<th>LINK</th>
 	</tr>
      <tr>
