--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -415,6 +415,15 @@ Dr. Ankur Shukla</td>
 
 DR. ANKUR SHUKLA </a></td>
      </tr> 
+
+	<tr>
+     	<td>52</td>
+     	<td>
+Medical science lesson</td>
+     	<td><a href="https://www.youtube.com/@Medicalsciencelesson/videos" target="_blank">
+
+Medical science lesson </a></td>
+     </tr> 
 </table>
 </body>
 </html>
