--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -433,6 +433,15 @@ Grameen homoeo</td>
 
 Grameen homoeo</a></td>
      </tr> 
+
+	<tr>
+     	<td>54</td>
+     	<td>
+The medical learning</td>
+     	<td><a href="https://www.youtube.com/@themedicallearning/videos" target="_blank">
+
+The medical learning</a></td>
+     </tr> 
 </table>
 </body>
 </html>
