--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -442,6 +442,15 @@ The medical learning</td>
 
 The medical learning</a></td>
      </tr> 
+
+	<tr>
+     	<td>55</td>
+     	<td>
+Homeopathic Medical Association of Telangana (HMAT)</td>
+     	<td><a href="https://www.youtube.com/@hmat6082/videos" target="_blank">
+
+HMAT</a></td>
+     </tr> 
 </table>
 </body>
 </html>
