--- a/CASE_STUDY.html
+++ b/CASE_STUDY.html
@@ -22,6 +22,7 @@ table {
 <div style="width:85%;height:230px;float:left">
 	<h1 style="text-align: center;color: blueviolet;padding-top:50px;font-size: 2.6em;">INDIAN HOMOEOPATHY DRUGS</h1>	
 </div>
+	<p><a href="CHYLURIA TREATMENT CASE REPORT.pdf">CHYLURIA TREATMENT CASE REPORT</a></p>
 
 
 </body>
