--- a/CASE_STUDY.html
+++ b/CASE_STUDY.html
@@ -14,6 +14,20 @@ table {
   width: 100%;
   border-collapse: collapse;
 }
+		ul {
+  list-style: none;
+}
+
+ul li:before {
+  content: '✓  ';
+}
+a{
+	font-size:2em;
+ text-decoration:none;
+}
+h3{
+	color:#fff;
+}
 		
 	</style>
 </head>
@@ -22,7 +36,11 @@ table {
 <div style="width:85%;height:230px;float:left">
 	<h1 style="text-align: center;color: blueviolet;padding-top:50px;font-size: 2.6em;">INDIAN HOMOEOPATHY DRUGS</h1>	
 </div>
-	<p><a href="CHYLURIA TREATMENT CASE REPORT.pdf">CHYLURIA TREATMENT CASE REPORT</a></p>
+	<h3>CASES</h3>
+	<ul>
+		<li><a href="CHYLURIA TREATMENT CASE REPORT.pdf">CHYLURIA TREATMENT CASE REPORT</a></li>
+	</ul>
+	
 
 
 </body>
