--- a/CASE_STUDY.html
+++ b/CASE_STUDY.html
@@ -38,7 +38,7 @@ h1{
 </div>
 	<h1>CASES</h1>
 	<ul>
-		<li><a href="CHYLURIA TREATMENT CASE REPORT.pdf">CHYLURIA TREATMENT CASE REPORT</a></li>
+		<li><a href="CHYLURIA TREATMENT CASE REPORT.pdf" target="_blank">CHYLURIA TREATMENT CASE REPORT</a></li>
 	</ul>
 	
 
