--- a/CASE_STUDY.html
+++ b/CASE_STUDY.html
@@ -39,7 +39,7 @@ h1{
 	<h1>CASES</h1>
 	<ul>
 		<li><a href="CHYLURIA TREATMENT CASE REPORT.pdf" target="_blank">CHYLURIA TREATMENT CASE REPORT</a></li>
-		<li><a href="Causes, Symptoms, Diagnosis & Treatment.pdf" target="_blank">Causes, Symptoms, Diagnosis & Treatment</a></li>
+		<li><a href="Causes, Symptoms, Diagnosis & Treatment.pdf" target="_blank">CHYLURIA - Causes, Symptoms, Diagnosis & Treatment</a></li>
 	</ul>
 	
 
