--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -443,13 +443,16 @@ The medical learning</td>
 The medical learning</a></td>
      </tr> 
 
-	<tr>
+   <tr>
      	<td>55</td>
-     	<td>
-Homeopathic Medical Association of Telangana (HMAT)</td>
-     	<td><a href="https://www.youtube.com/@hmat6082/videos" target="_blank">
+     	<td>Homeopathic Medical Association of Telangana (HMAT)</td>
+     	<td><a href="https://www.youtube.com/@hmat6082/videos" target="_blank">HMAT</a></td>
+   </tr> 
 
-HMAT</a></td>
+   <tr>
+     	<td>56</td>
+     	<td>HHF - Dr. SONAL PANCHBHAI</td>
+     	<td><a href="https://www.youtube.com/@hhf-dr.sonalpanchbhai8374/videos" target="_blank">HHF - Dr. SONAL PANCHBHAI</a></td>
      </tr> 
 </table>
 </body>
