--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -62,6 +62,12 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>International Journal of Homoeopathic Sciences</td>
           <td><a href="https://www.homoeopathicjournal.com/" target="_blank">Homoeopathic Journal (Archives)</a></td>
      </tr> 
+	<tr>
+          <td>6</td>
+          <td>National Library of Medicine:National Center for Biotechnology Information</td>
+          <td><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Homoeopathy&sort=date&ac=yes
+" target="_blank">National Library of Medicine : National Center for Biotechnology Information</a></td>
+     </tr> 
 </table>
 </body>
 </html>
