--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -65,8 +65,12 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
 	<tr>
           <td>6</td>
           <td>National Library of Medicine:National Center for Biotechnology Information</td>
-          <td><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Homoeopathy&sort=date&ac=yes
-" target="_blank">National Library of Medicine : National Center for Biotechnology Information</a></td>
+          <td><a href="https://pubmed.ncbi.nlm.nih.gov/?term=Homoeopathy&sort=date&ac=yes" target="_blank">National Library of Medicine : National Center for Biotechnology Information</a></td>
+     </tr> 
+	<tr>
+          <td>7</td>
+          <td>who is who (AICCRHPWA)</td>
+          <td><a href="https://aiccrhpwa.weebly.com/who-is-who.html" target="_blank">who is who (AICCRHPWA)</a></td>
      </tr> 
 </table>
 </body>
