--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -454,6 +454,11 @@ The medical learning</a></td>
      	<td>HHF - Dr. SONAL PANCHBHAI</td>
      	<td><a href="https://www.youtube.com/@hhf-dr.sonalpanchbhai8374/videos" target="_blank">HHF - Dr. SONAL PANCHBHAI</a></td>
      </tr> 
+	 <tr>
+     	<td>57</td>
+     	<td>HHF - Homeopathy in Hindi</td>
+     	<td><a href="https://www.youtube.com/@HHFacademy/videos" target="_blank">HHF - Homeopathy in Hindi</a></td>
+     </tr> 
 </table>
 </body>
 </html>
