--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -459,6 +459,11 @@ The medical learning</a></td>
      	<td>HHF - Homeopathy in Hindi</td>
      	<td><a href="https://www.youtube.com/@HHFacademy/videos" target="_blank">HHF - Homeopathy in Hindi</a></td>
      </tr> 
+	<tr>
+     	<td>58</td>
+     	<td>Dr. Anutosh Chakraborty</td>
+     	<td><a href="https://www.youtube.com/@dranutoshchakraborty/videos" target="_blank">Dr. Anutosh Chakraborty</a></td>
+     </tr> 
 </table>
 </body>
 </html>
