--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -72,6 +72,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>who is who (AICCRHPWA)</td>
           <td><a href="https://aiccrhpwa.weebly.com/who-is-who.html" target="_blank">who is who (AICCRHPWA)</a></td>
      </tr> 
+	<tr>
+          <td>8</td>
+          <td>THE HOMOEOPATHIC HERITAGE [ INTERNATIONAL JOURNAL OF HOMOEOPATHY ]</td>
+          <td><a href="https://homeopathicheritage.com/international-homeopathic-journal-download-free.php" target="_blank">THE HOMOEOPATHIC HERITAGE</a></td>
+     </tr> 
 </table>
 </body>
 </html>
