--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -76,6 +76,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>8</td>
           <td>THE HOMOEOPATHIC HERITAGE [ INTERNATIONAL JOURNAL OF HOMOEOPATHY ]</td>
           <td><a href="https://homeopathicheritage.com/international-homeopathic-journal-download-free.php" target="_blank">THE HOMOEOPATHIC HERITAGE</a></td>
+     </tr>
+	<tr>
+          <td>9</td>
+          <td>Health & Homeopathy</td>
+          <td><a href="https://homeopathy-uk.org/homeopathy-uk-news/health-homeopathy-magazine/" target="_blank">Health & Homeopathy</a></td>
      </tr> 
 </table>
 </body>
