--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -82,6 +82,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>Health & Homeopathy</td>
           <td><a href="https://homeopathy-uk.org/homeopathy-uk-news/health-homeopathy-magazine/" target="_blank">Health & Homeopathy</a></td>
      </tr> 
+	<tr>
+          <td>10</td>
+          <td>ALLEN COLLEGE NEWSLETTERS</td>
+          <td><a href="https://allencollege.co.uk/newsletters/" target="_blank">ALLEN COLLEGE NEWSLETTERS</a></td>
+     </tr> 
 </table>
 </body>
 </html>
