--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -87,6 +87,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>ALLEN COLLEGE NEWSLETTERS</td>
           <td><a href="https://allencollege.co.uk/newsletters/" target="_blank">ALLEN COLLEGE NEWSLETTERS</a></td>
      </tr> 
+	<tr>
+          <td>11</td>
+          <td>ALLEN COLLEGE BLOGS</td>
+          <td><a href="https://allencollege.co.uk/blog-list/" target="_blank">ALLEN COLLEGE BLOGS</a></td>
+     </tr> 
 </table>
 </body>
 </html>
