--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -92,6 +92,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>ALLEN COLLEGE BLOGS</td>
           <td><a href="https://allencollege.co.uk/blog-list/" target="_blank">ALLEN COLLEGE BLOGS</a></td>
      </tr> 
+	<tr>
+          <td>12</td>
+          <td>ALLEN COLLEGE Blog & Newsletter</td>
+          <td><a href="https://allencollege.co.uk/blog/" target="_blank">ALLEN COLLEGE Blog & Newsletter</a></td>
+     </tr> 
 </table>
 </body>
 </html>
