--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -97,6 +97,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>ALLEN COLLEGE Blog & Newsletter</td>
           <td><a href="https://allencollege.co.uk/blog/" target="_blank">ALLEN COLLEGE Blog & Newsletter</a></td>
      </tr> 
+	<tr>
+          <td>13</td>
+          <td>ALLEN COLLEGE Presentations of some key polychrests and their personality profiles</td>
+          <td><a href="https://allencollege.co.uk/medicines-and-books/" target="_blank">Presentations of some key polychrests and their personality profiles</a></td>
+     </tr> 
 </table>
 </body>
 </html>
