--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -464,6 +464,11 @@ The medical learning</a></td>
      	<td>Dr. Anutosh Chakraborty</td>
      	<td><a href="https://www.youtube.com/@dranutoshchakraborty/videos" target="_blank">Dr. Anutosh Chakraborty</a></td>
      </tr> 
+	<tr>
+     	<td>59</td>
+     	<td>Homeopathy360- Best Study Platform for Homeopaths</td>
+     	<td><a href="https://www.youtube.com/@Homeopathy360/videos" target="_blank">Homeopathy360- Best Study Platform for Homeopaths</a></td>
+     </tr> 
 </table>
 </body>
 </html>
