--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ by Dr Samuel Hahnemann</td>
 		<td><a href="http://www.homeoint.org/english/index.htm" target="_blank">HOMEOINT - We help homeopathy </a></td>
 		
 	</tr>
+	<tr>
+		<td>6</td>
+		<td>ONLINE MATERIA MEDICA</td>
+		<td><a href="https://www.vithoulkas.com/learning-tools/online-materia-medica/" target="_blank">ONLINE MATERIA MEDICA</a></td>
+		
+	</tr>
 </table>
 </body>
 </html>
