--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -102,6 +102,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>ALLEN COLLEGE Presentations of some key polychrests and their personality profiles</td>
           <td><a href="https://allencollege.co.uk/medicines-and-books/" target="_blank">Presentations of some key polychrests and their personality profiles</a></td>
      </tr> 
+	<tr>
+          <td>14</td>
+          <td>Owen Homoeopathics</td>
+          <td><a href="https://www.owenhomoeopathics.com.au/free-information/" target="_blank">Owen Homoeopathics [Free Information]</a></td>
+     </tr> 
 </table>
 </body>
 </html>
