--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -107,6 +107,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>Owen Homoeopathics</td>
           <td><a href="https://www.owenhomoeopathics.com.au/free-information/" target="_blank">Owen Homoeopathics [Free Information]</a></td>
      </tr> 
+	<tr>
+          <td>15</td>
+          <td>Central Counxil for Research in Homoeopathy (Ministry of AYUSH , Govt. of India)</td>
+          <td><a href="https://www.ccrhindia.nic.in/" target="_blank">CCRH (Ministry of AYUSH , Govt. of India) </a></td>
+     </tr> 
 </table>
 </body>
 </html>
