--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -109,7 +109,7 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
      </tr> 
 	<tr>
           <td>15</td>
-          <td>Central Counxil for Research in Homoeopathy (Ministry of AYUSH , Govt. of India)</td>
+          <td>Central Council for Research in Homoeopathy (Ministry of AYUSH , Govt. of India)</td>
           <td><a href="https://www.ccrhindia.nic.in/" target="_blank">CCRH (Ministry of AYUSH , Govt. of India) </a></td>
      </tr> 
 </table>
