--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@ li a:hover {
 <div style="width:100%;float: left;">
 <ul>
   <li><a href="index.html">HOME</a></li>
-  <li><a href="indian_homoeopathy_drugs.html">INDIAN HOMOEOPATHY DRUGS</a></li>
-  <li><a href="CASE_STUDY.html">CASE STUDY</a></li>
-  <li><a href="YOUTUBE_CHANNELS.html">YOUTUBE CHANNELS</a></li>
-    <li><a href="JOURNALS_ARTICLES.html">JOURNALS & ARTICLES</a></li>	
+  <li><a href="indian_homoeopathy_drugs.html" target="_blank">INDIAN HOMOEOPATHY DRUGS</a></li>
+  <li><a href="CASE_STUDY.html" target="_blank">CASE STUDY</a></li>
+  <li><a href="YOUTUBE_CHANNELS.html" target="_blank">YOUTUBE CHANNELS</a></li>
+  <li><a href="JOURNALS_ARTICLES.html" target="_blank">JOURNALS & ARTICLES</a></li>	
+  <li><a href="HB.html" target="_blank">HOMOEOPATHY BOOKS</a></li>		
 </ul>
 </div>
 <!-------------NAV-BAR--------------->
