--- a/HB.html
+++ b/HB.html
@@ -4,9 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Homoeopathy Books</title>
+	 <link rel="icon" href="logo.jpg">
+	 <style>
+	 	
+	 </style>
 </head>
-<body>
-	<h1 style="color: red;text-align: center;">Homoeopathy Books</h1>
+<body style="background-color: lightcoral;">
+	<div style="width:15%;height:230px;float: left;"><a href="index.html"><img src="logo.jpg" style="width:200px;height:200px;border-radius: 50%;float: left;"></a></div>
+<div style="width:85%;height:230px;float:left">
+	<h1 style="text-align: center;color: blueviolet;padding-top:50px;font-size: 2.6em;">HOMOEOPATHY BOOKS</h1>	
+</div>
 	<img src="b1.jpg" width="605" height="420">
 	<img src="b2.jpg" width="300" height="420">
 	<img src="b3.jpg" width="300" height="420">
