--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -112,6 +112,12 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>Central Council for Research in Homoeopathy (Ministry of AYUSH , Govt. of India)</td>
           <td><a href="https://www.ccrhindia.nic.in/" target="_blank">CCRH (Ministry of AYUSH , Govt. of India) </a></td>
      </tr> 
+
+	<tr>
+          <td>16</td>
+          <td>HOMEOPATHY SCHOOL [ SELF HELP REMEDIES ]</td>
+          <td><a href="https://www.homeopathyschool.com/the-clinic/self-help-remedies/" target="_blank">SELF HELP REMEDIES</a></td>
+     </tr> 
 </table>
 </body>
 </html>
