--- a/YOUTUBE_CHANNELS.html
+++ b/YOUTUBE_CHANNELS.html
@@ -469,6 +469,11 @@ The medical learning</a></td>
      	<td>Homeopathy360- Best Study Platform for Homeopaths</td>
      	<td><a href="https://www.youtube.com/@Homeopathy360/videos" target="_blank">Homeopathy360- Best Study Platform for Homeopaths</a></td>
      </tr> 
+	<tr>
+     	<td>60</td>
+     	<td>Dr. Vijaykrishna Lectures</td>
+     	<td><a href="https://www.youtube.com/@dr.vijaykrishnalectures4043/videos" target="_blank">Dr. Vijaykrishna Lectures</a></td>
+     </tr> 
 </table>
 </body>
 </html>
