--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@ by Dr Samuel Hahnemann</td>
 		<td><a href="https://www.vithoulkas.com/learning-tools/online-materia-medica/" target="_blank">ONLINE MATERIA MEDICA</a></td>
 		
 	</tr>
+	<tr>
+		<td>7</td>
+		<td>MODERN HOMOEOPATHY</td>
+		<td><a href="https://www.modernhomoeopathy.com/" target="_blank">MODERN HOMOEOPATHY</a></td>
+		
+	</tr>
 </table>
 </body>
 </html>
