--- a/CASE_STUDY.html
+++ b/CASE_STUDY.html
@@ -40,6 +40,7 @@ h1{
 	<ul>
 		<li><a href="CHYLURIA TREATMENT CASE REPORT.pdf" target="_blank">CHYLURIA TREATMENT CASE REPORT</a></li>
 		<li><a href="Causes, Symptoms, Diagnosis & Treatment.pdf" target="_blank">CHYLURIA - Causes, Symptoms, Diagnosis & Treatment</a></li>
+	        <li><a href="warts-treatment_case study.pdf" target="_blank">WARTS TREATMENT CASE STUDY</a></li>
 	</ul>
 	
 
