--- a/JOURNALS_ARTICLES.html
+++ b/JOURNALS_ARTICLES.html
@@ -118,6 +118,11 @@ HOMOEOPATHY / HOMEOPATHY JOURNALS & ARTICLES
           <td>HOMEOPATHY SCHOOL [ SELF HELP REMEDIES ]</td>
           <td><a href="https://www.homeopathyschool.com/the-clinic/self-help-remedies/" target="_blank">SELF HELP REMEDIES</a></td>
      </tr> 
+	<tr>
+          <td>17</td>
+          <td>Board Homepathic System Medicine</td>
+          <td><a href="https://homeopathy.delhi.gov.in/homeopathy/board-homepathic-system-medicine" target="_blank">Board Homepathic System Medicine</a></td>
+     </tr> 
 </table>
 </body>
 </html>
